--- a/bzl/docs/testing.adoc
+++ b/bzl/docs/testing.adoc
@@ -63,7 +63,14 @@ will use `boxedints.ml` instead, which does.
 
 === queries
 
-CAUTION: You might have to quote anything containing an asterisk, depending on your shell.
+* link:https://bazel.build/query/guide[Bazel query guide]
+* link:https://bazel.build/query/language[Bazel query reference]
+
+TIP: For each query you can ask for several kinds of output: `build`
+displays build code; `label` displays the target label; `label_kind`
+displays the both the target label and rule name; etc. - see link:https://bazel.build/query/language#output-formats[Output formats] for more information.
+
+CAUTION: Don't forget to quote the query expressions.
 
 * List all rules used in package `//testsuite/tests/basic`:
 
@@ -88,29 +95,63 @@ Macro `expect_test` expands to targets using rules `expect_vv_test`,
 
     bazel query 'tests(//testsuite/tests/basic:Boxedints_test)'
 
+The `expect_test` macro contains a nested macro, `test_executable`.
+
+* List the targets that `test_executable` expands to:
+
+     bazel query 'kind("test_executable", testsuite/tests/basic:*)' --output label_kind | sort
+
+* List all the `test_module` targets:
+
+    bazel query 'kind("test_module", testsuite/tests/basic:*)' --output label_kind | sort
+
+* Show targets whose label contains "int" by filtering with a regex:
+
+    bazel query 'filter(".*int.*", kind(".*_test rule", //testsuite/tests/basic...))'
+
 ==== inspecting build code
 
 * Show the code of a particular `expect_vv_test` target:
 
-    bazel query --output=build testsuite/tests/basic:Boxedints_vv_test
+    bazel query testsuite/tests/basic:Boxedints_vv_test --output=build
 
 * Show the code for the `test_executable` used by `//testsuite/tests/basic:Boxedints_vv_test`:
 
-    bazel query --output=build testsuite/tests/basic:Boxedints.vv.byte
+    bazel query testsuite/tests/basic:Boxedints.vv.byte --output=build
 
 * Expand all macros in `testsuite/tests/basic/BUILD.bazel`:
 
-    bazel query --output=build testsuite/tests/basic/...
-    or: bazel query --output=build 'testsuite/tests/basic/...:*'
+    bazel query testsuite/tests/basic/...  --output=build
+    or: bazel query 'testsuite/tests/basic/...:*'  --output=build
 
 * Expand the `expect_test` macro for target `testsuite/tests/basic:Boxedints_test`:
 
-    bazel query --output=build testsuite/tests/basic:Boxedints_test
+    bazel query testsuite/tests/basic:Boxedints_test  --output=build
 
 * Expand the `test_executable` macro for target `testsuite/tests/basic:Boxedints.ss.opt`:
 
-    bazel query --output=build testsuite/tests/basic:Boxedints.ss.opt
+    bazel query testsuite/tests/basic:Boxedints.ss.opt  --output=build
 
+==== dependencies
+
+* What build files does a target depend on?
+
+    bazel query 'buildfiles(deps(//testsuite/tests/basic:Arrays))'
+
+* Why does `//testsuite/tests/basic:Arrays_test` depend on
+  `//stdlib:Stdlib.Array`?
+
+    bazel cquery 'somepath(testsuite/tests/basic:Arrays_test, stdlib:Stdlib.Array)'
+
+NOTE: The `cquery` command runs _after_ all `select` functions have been resolved.
+
+* Which targets depend on Stdlib.Gc
+
+     bazel cquery 'testsuite/tests/basic/... intersect allpaths(testsuite/tests/basic/..., stdlib:Stdlib.Gc)' | sort
+
+* Show length of dependency paths for a target:
+
+    bazel query 'deps(//testsuite/tests/basic:Arrays)' --output maxrank
 
 
 == Default configuration
